--- a/tf_idf_v_2_multistep.html
+++ b/tf_idf_v_2_multistep.html
@@ -45,7 +45,7 @@
 		
         <div class="paragraph">Below, you will see maps with many colored dots. Some colors are more common, others are rare.</div>
         <div class="paragraph"><b>Rare colors should only appear in a "crowd" of common colors.</b></div>
-        <div class="paragraph">In some places, this rule is broken. Please find such places and click on them.</div>
+        <div class="paragraph">In some places, this rule is broken. Find such places (if any) and click on them.</div>
 
         <br/>
 
@@ -55,10 +55,10 @@
 
         <div id="break-screen" class="paragraph hiddenFurther" align="center">
         	<div class="paragraph">
-        		Map 
-        		<span id="msgCurrMap" class="bigWord"></span> 
-        		out of 
-        		<span id="msgTotalMap" class="bigWord"></span> 
+        		Map
+        		<span id="msgCurrMap"></span>
+        		out of
+        		<span id="msgTotalMap"></span>
         		complete. Press "next" to see the next one.
         	</div>
         	<div class="paragraph controls">
